// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlainList Should render blank with empty list 1`] = `
<DocumentFragment>
  <p>
    List is empty...
  </p>
</DocumentFragment>
`;

exports[`PlainList Should render items 1`] = `
<DocumentFragment>
  <li>
    item-1
  </li>
  <li>
    item-2
  </li>
  <li>
    item-3
  </li>
</DocumentFragment>
`;

exports[`PlainList Should render items wrapped in a tag 1`] = `
<DocumentFragment>
  <div
    id="container"
  >
    <li>
      item-1
    </li>
    <li>
      item-2
    </li>
    <li>
      item-3
    </li>
  </div>
</DocumentFragment>
`;

exports[`PlainList Should render provided blank with empty list 1`] = `
<DocumentFragment>
  <div>
    Empty
  </div>
</DocumentFragment>
`;
